# topparse

./: .gitignore  CHANGELOG.md  README.md  topparse.cabal
app/: Main.hs
src/Bio/Gromacs/Top/: Lexer.hs  Section.hs
test/: sections.top
