cabal-version:      2.4
name:               topparse
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Gromacs topology parser library

-- A longer description of the package.
description:        Gromacs topology parser library

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            LGPL-3.0-only
author:             Danila Iakovlev
maintainer:         moleculadesigner@gmail.com

-- A copyright notice.
-- copyright:
category:           Science   
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Bio.Gromacs.Top.Lexer
        -- Bio.Section

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: OverloadedStrings
    build-depends:
        base ^>=4.17.2.0,
        text ^>=2.0.2,
        megaparsec ^>=9.6.1,
        mtl ^>= 2.2,
        containers ^>=0.6.7,
        extra ^>=1.7.14,
        process ^>=1.6.17.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable topparse
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: OverloadedStrings
    build-depends:
        base ^>=4.17.2.0,
        text ^>=2.0.2,
        topparse

    hs-source-dirs:   app
    default-language: Haskell2010
